--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -24,7 +24,9 @@ versions.state_delegator = "1.5"
 
 versions.junit = "4.12"
 versions.mockito = "2.20.1"
+versions.mockito_kotlin = "2.0.0"
 versions.logging_interceptor = "3.0.0"
+versions.assertj = "3.10.0"
 
 
 def deps = [:]
@@ -104,6 +106,9 @@ def test = [:]
 test.junit = "junit:junit:$versions.junit"
 test.mockito_core = "org.mockito:mockito-core:$versions.mockito"
 test.mockito_inline = "org.mockito:mockito-inline:$versions.mockito"
+test.mockito_kotlin = "com.nhaarman.mockitokotlin2:mockito-kotlin:$versions.mockito_kotlin"
+test.lifecycle = "androidx.arch.core:core-testing:$versions.lifecycle"
+test.assertj = "org.assertj:assertj-core:$versions.assertj"
 deps.test = test
 //endregion
 
